dc/s2n-quic-dc/src/snapshots/stream__reader__tests__blocked_signal_doubles_growth_ratio_and_dedups.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] DEBUG Reader dropping binding_id=1 status=Init final_size=None consumed_len=0 total_received_len=0 is_writing_complete=false is_reading_complete=false
0 [main] DEBUG Reader dropped before FIN received - sent STOP_SENDING binding_id=1
0 [main] TRACE c#credit.release.bytes=1048576
0 [main] TRACE c#credit.release.calls=1
0 [main] TRACE c#credit.release.bytes=64
0 [main] TRACE c#credit.release.calls=1
0 [main] DEBUG event=on_received prev=Init next=Open location=dc/s2n-quic-dc/src/stream/reader.rs
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=3145728
1 [main] DEBUG Reader dropping binding_id=1 status=Open final_size=None consumed_len=64 total_received_len=64 is_writing_complete=false is_reading_complete=false
1 [main] DEBUG Reader dropped before FIN received - sent STOP_SENDING binding_id=1
1 [main] TRACE c#credit.release.bytes=4194240
1 [main] TRACE c#credit.release.calls=1
