dc/s2n-quic-dc/src/snapshots/stream__reader__tests__client_fin_observed_before_gap_fill_does_not_send_max_data.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] TRACE c#credit.release.bytes=5
0 [main] TRACE c#credit.release.calls=1
0 [main] DEBUG event=on_received prev=Init next=Open location=dc/s2n-quic-dc/src/stream/reader.rs
1 [main] DEBUG Reader complete - all data consumed binding_id=1 final_size=Some(5) consumed_len=5
1 [main] DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs
1 [main] DEBUG Reader dropping binding_id=1 status=Complete final_size=Some(5) consumed_len=5 total_received_len=5 is_writing_complete=true is_reading_complete=true
1 [main] TRACE c#credit.release.bytes=3
1 [main] TRACE c#credit.release.calls=1
