dc/s2n-quic-dc/src/snapshots/stream__reader__tests__dispatch_release_clamped_to_advertised_window_on_bootstrap_overshoot.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
1 [main] DEBUG Reader dropping binding_id=1 status=Open final_size=None consumed_len=0 total_received_len=0 is_writing_complete=false is_reading_complete=false
1 [main] DEBUG Reader dropped before FIN received - sent STOP_SENDING binding_id=1
