dc/s2n-quic-dc/src/snapshots/stream__reader__tests__drop_after_fin_completion_sends_no_reset.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] TRACE c#credit.release.bytes=2
0 [main] TRACE c#credit.release.calls=1
0 [main] DEBUG event=on_received prev=Init next=Open location=dc/s2n-quic-dc/src/stream/reader.rs
0 [main] DEBUG Reader complete - all data consumed binding_id=1 final_size=Some(2) consumed_len=2
0 [main] DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs
0 [main] DEBUG Reader dropping binding_id=1 status=Complete final_size=Some(2) consumed_len=2 total_received_len=2 is_writing_complete=true is_reading_complete=true
0 [main] TRACE c#credit.release.bytes=1048574
0 [main] TRACE c#credit.release.calls=1
