dc/s2n-quic-dc/src/snapshots/stream__reader__tests__in_order_read_reports_byte_count_and_completes.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] TRACE c#credit.release.bytes=8
0 [main] TRACE c#credit.release.calls=1
0 [main] DEBUG event=on_received prev=Init next=Open location=dc/s2n-quic-dc/src/stream/reader.rs
0 [main] DEBUG Reader complete - all data consumed binding_id=1 final_size=Some(8) consumed_len=8
0 [main] DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs
0 [main] DEBUG Reader dropping binding_id=1 status=Complete final_size=Some(8) consumed_len=8 total_received_len=8 is_writing_complete=true is_reading_complete=true
0 [main] TRACE c#credit.release.bytes=1048568
0 [main] TRACE c#credit.release.calls=1
